update name of Parser class

--- a/src/org/htmlparser/package.html
+++ b/src/org/htmlparser/package.html
@@ -35,7 +35,7 @@
 -->
 </head>
 <body bgcolor="white">
-The basic API classes which will be used by most users when working with the html parser (HTMLParser class is the most important one in this).
+The basic API classes which will be used by most users when working with the html parser (the Parser class is the most important one in this).
 
 <h2>Related Documentation</h2>
 
