Doco update. Move the lexer from future tense to current.

--- a/src/org/htmlparser/lexer/nodes/package.html
+++ b/src/org/htmlparser/lexer/nodes/package.html
@@ -38,8 +38,7 @@
 <TITLE>Nodes Package</TITLE>
 </HEAD>
 <BODY>
-The nodes package will eventually be the lexemes returned by the base level I/O subsystem.
-<EM>It is currently under development.</EM>
+The nodes package are the lexemes returned by the base level I/O subsystem.
 There are three types of lexems so far, <code>RemarkNode</code>, <code>StringNode</code> and
 <code>TagNode</code>. Within the <code>TagNode</code> objects is a list of
 <code>Attribute</code> objects.<p>
