Rework character entity translation. See task 58599  enhance character reference translation. Decode now handles missing semi colons, encoding is more efficient, hexadecimal numeric character entity references are handled and both encoding and decoding make minimal use of substring(). Augmented the tests in CharacterTranslationTest significantly, and merged the Generate class into the tests. Added translate command scripts in bin, which read from stdin and write to stdout.

--- a/src/org/htmlparser/util/package.html
+++ b/src/org/htmlparser/util/package.html
@@ -28,19 +28,9 @@
  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 -->
 </head>
-<body bgcolor="white">
-The util package is intended for holding utility classes that dont directly help with the parsing,
-but can take responsibilities out from some classes. Resuable code which can be reused by many classes, should be located
-in this package.
-
-<h2>Related Documentation</h2>
-
-For overviews, tutorials, examples, guides, and tool documentation, please see:
-<ul>
-  <li><a href="http://htmlparser.sourceforge.net">HTML Parser Home Page</a>
-</ul>
-
-<!-- Put @see and @since tags down here. -->
-
+<body>
+Code which can be reused by many classes, is located in this package.
+The util package is intended for holding utility classes that don't directly
+help with parsing, but can take responsibilities out of some classes.
 </body>
 </html>
