Fix bug #902121 StringBean throws NullPointerException. Added ScriptDecoder to handle Microsoft Script Encoder encrypted tags. Added accessor to ScriptTag's scriptCode property to be able to override it. Ensured that a Tag always has a non-null name. Skip STYLE tags in StringBean, just like SCRIPT.

--- a/src/org/htmlparser/filters/package.html
+++ b/src/org/htmlparser/filters/package.html
@@ -37,7 +37,7 @@ For example, to display tags having the "id" attribute, you could use:
 Parser parser = new Parser ("http://yadda");
 parser.parse (new HasAttributeFilter ("id"));
 </pre>
-These filters can be combined to yield powerfull extraction capabilities.
+These filters can be combined to yield powerful extraction capabilities.
 For example, to get a list of links where the contents is an image, you could use:
 <pre>
 NodeList list = new NodeList ();
