Update build instruction problem identified by sarsie.

--- a/src/doc-files/building.html
+++ b/src/doc-files/building.html
@@ -66,8 +66,9 @@
   Environment (IDE) such as <a href="http://www.netbeans.org/">NetBeans</a> or <a
   href="http://eclipse.org/">Eclipse</a>.
   Mount the org directory where the HTML Parser was installed along with the
-  <code>junit.jar</code> file from the <code>lib</code> directory. "Build All"
-  should work.
+  <code>junit.jar</code> file from the <code>lib</code> directory, and the
+  <code>tools.jar</code> file from the java JDK lib directory
+  <code>[where java is installed]/lib/tools.jar<code>. "Build All" should work.
   <H2>CVS</H2>
   The most recent files are only available via CVS:
   <pre>
