Fix some javadoc warnings.

--- a/src/doc-files/overview.html
+++ b/src/doc-files/overview.html
@@ -24,7 +24,7 @@
   <h2>Outstanding Issues.</h2>
   Bugs are by far, the highest priority issues. Various reports of bugs related to
   the HTML Parser is available from the <A
-  HREF="http://sourceforge.net/tracker/?group_id=24399&atid=381399">Bug
+  HREF="http://sourceforge.net/tracker/?group_id=24399&atid=381399" target="_top">Bug
   Tracker</A> on SourceForge. Issues related to incorrect behaviour of the
   current parser should be logged and tracked using this mechanism. Please use
   task lists and enhancement requests for issues that would not be considered
