Update javadocs. Enable SiteCapturer to handle resource names containing spaces.

--- a/src/org/htmlparser/package.html
+++ b/src/org/htmlparser/package.html
@@ -32,10 +32,7 @@
 The basic API classes which will be used by most developers when working with
 the HTML Parser.
 <p>The {@link org.htmlparser.Parser} class is the main high level class that
-provides simplified access to the contents of an HTML page. The page can be
-specified as either a URLConnection or a String. In the case of a String, an
-attempt is made to open it as a URL, and if that fails it assumes it is a local
-disk file.
+provides simplified access to the contents of an HTML page.
 A wide range of methods is available to customize the operation of the Parser,
 as well as access specific pieces of the page as
 {@link org.htmlparser.Node Nodes}.</p>
@@ -47,11 +44,13 @@ of child nodes and {@link org.htmlparser.Attribute attributes}.</p>
 <p>The only provided implementation of the NodeFactory interface
 is the {@link org.htmlparser.PrototypicalNodeFactory} which
 operates by holding example nodes and cloning them as needed to satisfy the
-requests for nodes by the Parser. The Lexer is it's own NodeFactory, returning
-new {@link org.htmlparser.nodes.TextNode},
+requests for nodes by the Parser. By default, a Lexer is it's own NodeFactory,
+returning new {@link org.htmlparser.nodes.TextNode},
 {@link org.htmlparser.nodes.RemarkNode} and undifferentiated
 {@link org.htmlparser.nodes.TagNode Tagnodes} (see the
-{@link org.htmlparser.nodes nodes} package).</p>
+{@link org.htmlparser.nodes nodes} package), but when the parser uses a lexer
+it replaces this behaviour with a PrototypicalNodeFactory to return a rich
+set of specific tags (see the {@link org.htmlparser.tags tags} package).</p>
 <p>The {@link org.htmlparser.NodeFilter} interface is used by the filtering
 code to determine if a node meets a certain criteria. Some generic examples of
 filters can be found in the {@link org.htmlparser.filters filters} package.
