--- a/src/org/htmlparser/beans/package.html
+++ b/src/org/htmlparser/beans/package.html
@@ -29,18 +29,26 @@
 -->
 </head>
 <body bgcolor="white">
-The beans package contains Java Beans that can integrate within IDEs.
-There are visual and non-visual beans, the former follow the naming
+The beans package contains Java Beans using the HTML Parser.
+<p>There are visual and non-visual beans, the former follow the naming
 pattern HTMLxxx.
-BeanyBaby is an example application using these beans.
-
-<h2>Related Documentation</h2>
-
-For overviews, tutorials, examples, guides, and tool documentation, please see:
 <ul>
-  <li><a href="http://htmlparser.sourceforge.net">HTML Parser Home Page</a>
+<li>{@link org.htmlparser.beans.BeanyBaby} is an example application using the StringBean and LinkBean.</li>
+<li>{@link org.htmlparser.beans.FilterBean} is a bean accepting a filter and returning a
+{@link org.htmlparser.util.NodeList NodeList}.</li>
+<li>{@link org.htmlparser.beans.LinkBean} is a bean returning an array of URLs from a page.</li>
+<li>{@link org.htmlparser.beans.StringBean} is a bean returning the text of a page.</li>
+<li>{@link org.htmlparser.beans.HTMLLinkBean} is a GUI bean showing the URLs from a page.</li>
+<li>{@link org.htmlparser.beans.HTMLStringBean} is a GUI bean showing the text of a page.</li>
 </ul>
-
+</p>
+<p>For a quick look at the output of these beans, run beanybaby or filterbuilder:
+<pre>
+<code>
+bin/beanybaby [url]
+bin/filterbuilder [url]
+</code>
+</pre>
 <!-- Put @see and @since tags down here. -->
 
 </body>
