Documentation revamp part two.

--- a/src/org/htmlparser/beans/package.html
+++ b/src/org/htmlparser/beans/package.html
@@ -39,7 +39,7 @@ pattern HTMLxxx.
 <li>{@link org.htmlparser.beans.LinkBean} is a bean returning an array of URLs from a page.</li>
 <li>{@link org.htmlparser.beans.StringBean} is a bean returning the text of a page.</li>
 <li>{@link org.htmlparser.beans.HTMLLinkBean} is a GUI bean showing the URLs from a page.</li>
-<li>{@link org.htmlparser.beans.HTMLStringBean} is a GUI bean showing the text of a page.</li>
+<li>{@link org.htmlparser.beans.HTMLTextBean} is a GUI bean showing the text of a page.</li>
 </ul>
 </p>
 <p>For a quick look at the output of these beans, run beanybaby or filterbuilder:
