Documentation revamp part three. Reworked some JavaDoc descriptions. Added "HTML Parser for dummies" introductory text. Removed checkstyle.jar and fit.jar (and it's cruft).

--- a/src/doc-files/overview.html
+++ b/src/doc-files/overview.html
@@ -11,14 +11,17 @@
   <h2>Components</h2>
   The HTML Parser distribution is composed of:
   <ul>
-  <li>a low level {@link org.htmlparser.lexer.Lexer lexer} that converts characters into tags</li>
-  <li>a high level {@link org.htmlparser.Parser parser} that provides a heirarchical document view</li>
-  <li>several example applications</li>
+  <li>a low level {@link org.htmlparser.lexer.Lexer lexer} that converts characters from a HTML page into a linear sequence of nodes</li>
+  <li>a high level {@link org.htmlparser.Parser parser} that provides a heirarchical document model of a HTML page</li>
+  <li>source code in the src.zip file</li>
   </ul>
   <p>
+  <h2>Getting Started</h2>
+  For novice users, an introductory guide on how to set up your environment to
+  use the HTML Parser is provided in <A href="{@docRoot}/doc-files/using.html">HTML Parser for Dummies</A>.
   <h2>Building</h2>
-  To build the system you'll need to get the sources from the
-  <a href="http://sourceforge.net/project/showfiles.php?group_id=24399&release_id=161563">HTML
+  To build the HTML Parser you'll need to get the sources from the
+  <a href="http://sourceforge.net/project/showfiles.php?group_id=24399" target="_top">HTML
   Parser project on Sourceforge</a> if you haven't already, and then follow the
   <A href="{@docRoot}/doc-files/building.html">build instructions</A>.
   <h2>Outstanding Issues.</h2>
